# minecraft-c

./: CMakeLists.txt  README.md
src/: main.c  safe_cast.c  safe_cast.h  utils.c  utils.h
src/assets/: dirt.ppm  grass_block_side.ppm  grass_block_top.ppm  oak_leaves.ppm  oak_log.ppm  oak_log_top.ppm  stone.ppm
src/chunk/: chunk.c  chunk.h  shader.c  shader.h  triangulate.c  triangulate.h
src/color/: color.c  color.h
src/cpu_rasterizer/: cpu_rasterizer.c  cpu_rasterizer.h
src/hash_map/: hash_map.c  hash_map.h
src/images/: ppm.c  ppm.h
src/linalg/: constants.h  matrix.h  scalars.h  transformations.c  transformations.h  vector.h
src/obj_loader/: obj_loader.c  obj_loader.h
src/window/: window.c  window.h
src/worksteal/: thread_pool.c  thread_pool.h  wait_counter.c  wait_counter.h  worksteal.c  worksteal.h
